# handler/request.go
@@ -19,3 +19,20 @@ func (r *userLoginRequest) bind(c echo.Context) error {
 	}
 	return nil
 }
+
+type userRegisterRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=20"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
+func (r *userRegisterRequest) bind(c echo.Context) error {
+	if err := c.Bind(r); err != nil {
+		return err
+	}
+
+	if err := c.Validate(r); err != nil {
+		return err
+	}
+	return nil
+}
